--- a/Blog -ASP.NET MVC Practical Project/Blog -ASP.NET MVC Practical Project.csproj
+++ b/Blog -ASP.NET MVC Practical Project/Blog -ASP.NET MVC Practical Project.csproj
@@ -281,6 +281,7 @@
     <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\My Posts\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
